@@ -1388,7 +1388,13 @@ enum e_skill {
 	SO_VACUUM_EXTREME,
 	SO_VARETYR_SPEAR,
 	SO_ARRULLO,
+	SO_EL_CONTROL,
 	SO_SUMMON_AGNI,
+	SO_SUMMON_AQUA,
+	SO_SUMMON_VENTUS,
+	SO_SUMMON_TERA,
+
+	SO_ENDMARK = 2472,
 
 	GN_TRAINING_SWORD = 2474,
 	GN_REMODELING_CART,
